[1.44] update link to index.html - openssh/report.html

--- a/openssh/report.html
+++ b/openssh/report.html
@@ -9,7 +9,7 @@
 <link rel="canonical" href="https://www.openssh.com/report.html">
 
 <h2 id=OpenBSD>
-<a href="/">
+<a href="index.html">
 <i>Open</i><b>SSH</b></a>
 Сообщить об ошибке
 </h2>
