--- a/openssh/manual.html
+++ b/openssh/manual.html
@@ -1,53 +1,50 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
+<!doctype html>
+<html lang=ru>
+<meta charset=utf-8>
+
 <title>OpenSSH: Документация (man-pages)</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="description" content="OpenSSH Manual Pages">
-<meta name="copyright" content="This document copyright 1999-2016 by OpenBSD.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="canonical" href="https://www.openssh.com/manual.html">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
-</head>
 
-<body bgcolor="#ffffff" text="#000000" link="#23238E">
 
-<h2>
-<a href="index.html">
-<font color="#0000ff"><i>Open</i></font><font color="#000084">SSH</font></a>
-<font color="#e00000">Документация (man-pages)</font>
+<h2 id=OpenBSD>
+<a href="/">
+<i>Open</i><b>SSH</b></a>
+man-руководства
 </h2>
 <hr>
 
 <p>
-OpenBSD man-страницы, доступные в online, для нижеперечисленных команд.
-Эти страницы относятся к последней development-версии OpenSSH.<p>
+OpenBSD man-страницы, доступные online, для нижеперечисленных команд.
+Эти страницы относятся к последней development-версии OpenSSH.
 
 <ul>
 <li><a href="https://man.openbsd.org/ssh">ssh(1)</a>
-     - The basic rlogin/rsh-like client program
+     &mdash; The basic rlogin/rsh-like client program
 <li><a href="https://man.openbsd.org/sshd">sshd(8)</a>
-     - The daemon that permits you to log in
+     &mdash; The daemon that permits you to log in
 <li><a href="https://man.openbsd.org/ssh_config">ssh_config(5)</a>
-     - The client configuration file
+     &mdash; The client configuration file
 <li><a href="https://man.openbsd.org/sshd_config">sshd_config(5)</a>
-     - The daemon configuration file
+     &mdash; The daemon configuration file
 <li><a href="https://man.openbsd.org/ssh-agent">ssh-agent(1)</a>
-     - An authentication agent that can store private keys
+     &mdash; An authentication agent that can store private keys
 <li><a href="https://man.openbsd.org/ssh-add">ssh-add(1)</a>
-     - Tool which adds keys to in the above agent
+     &mdash; Tool which adds keys to in the above agent
 <li><a href="https://man.openbsd.org/sftp">sftp(1)</a>
-     - FTP-like program that works over SSH1 and SSH2 protocol
+     &mdash; FTP-like program that works over SSH1 and SSH2 protocol
 <li><a href="https://man.openbsd.org/scp">scp(1)</a>
-     - File copy program that acts like rcp
+     &mdash; File copy program that acts like rcp
 <li><a href="https://man.openbsd.org/ssh-keygen">ssh-keygen(1)</a>
-     - Key generation tool
+     &mdash; Key generation tool
 <li><a href="https://man.openbsd.org/sftp-server">sftp-server(8)</a>
-     - SFTP server subsystem (started automatically by sshd)
+     &mdash; SFTP server subsystem (started automatically by sshd)
 <li><a href="https://man.openbsd.org/ssh-keyscan">ssh-keyscan(1)</a>
-     - Utility for gathering public host keys from a number of hosts
+     &mdash; Utility for gathering public host keys from a number of hosts
 <li><a href="https://man.openbsd.org/ssh-keysign">ssh-keysign(8)</a>
-     - Helper program for host-based authentication
+     &mdash; Helper program for host-based authentication
 </ul>
 
 <p>
@@ -58,7 +55,7 @@ working group and is specified in several RFCs and drafts.
 The overall structure of SSH2 is described in the
 <a href="https://www.ietf.org/rfc/rfc4251.txt">architecture</a> RFC.
 It is composed of three layered components:
-<p>
+
 <ul>
 <li>
 The 
@@ -67,6 +64,7 @@ provides algorithm negotiation and a key exchange.
 The key exchange includes server authentication and
 results in a cryptographically secured connection:
 it provides integrity, confidentiality and optional compression.
+
 <li>
 The 
 <a href="https://www.ietf.org/rfc/rfc4252.txt">user authentication layer</a>
@@ -75,6 +73,7 @@ by the transport layer.
 It provides several mechanisms for user authentication.
 These include traditional password authentication as well as public-key
 or host-based authentication mechanisms.
+
 <li> The 
 <a href="https://www.ietf.org/rfc/rfc4254.txt">connection layer</a>
 multiplexes many different concurrent channels over the authenticated connection
@@ -82,42 +81,48 @@ and allows tunneling of login sessions and TCP-forwarding.
 It provides a flow control service for these channels.
 Additionally, various channel-specific options can be negotiated.
 </ul>
+
+<p>
 Дополнительные документы спецификаций:
+
 <ul>
 <li> The
 <a href="https://www.ietf.org/rfc/rfc4256.txt">interactive
 authentication</a>
 RFC provides support for new authentication schemes like S/Key
 or TIS authentication.
+
 <li> The SFTP file transfer protocol is specified in the
 <a href="https://www.openbsd.org/openssh/txt/draft-ietf-secsh-filexfer-02.txt">filexfer</a> draft.
 OpenSSH implements a SFTP
 <a href="https://man.openbsd.org/sftp">client</a> and
 <a href="https://man.openbsd.org/sftp-server">server</a>.
+
 <li> A file format for public keys is specified in the 
 <a href="https://www.openbsd.org/openssh/txt/draft-ietf-secsh-publickeyfile-02.txt">publickeyfile</a> draft.
 The command
 <a href="https://man.openbsd.org/ssh-keygen">ssh-keygen(1)</a> can be used
 to convert an OpenSSH public key to this file format.
+
 <li> The
 <a href="https://www.ietf.org/rfc/rfc4419.txt">Diffie-Hellman Group Exchange</a> allows clients to request more secure groups for the Diffie-Hellman key exchange.
+
 <li>OpenSSH implemented a compression method "zlib@openssh.com" that delays
     starting compression until after user authentication, to eliminate the
     risk of pre-authentication attacks against the compression code. It is
     described in
     <a href="https://www.openbsd.org/openssh/txt/draft-miller-secsh-compression-delayed-00.txt">draft-miller-secsh-compression-delayed-00.txt</a>.
+
 <li>OpenSSH implements an additional MAC (Message Authentication Code) 
     "umac-64@openssh.com", which has superior performance to the ones specified
     in RFC 4253. It is described in
     <a href="https://www.openbsd.org/openssh/txt/draft-miller-secsh-umac-01.txt">draft-miller-secsh-umac-01.txt</a>.
+
 <li>The authentication agent protocol used by
     <a href="https://man.openbsd.org/ssh-agent">ssh-agent</a> is documented in the
     <a href="https://cvsweb.openbsd.org/src/usr.bin/ssh/PROTOCOL.agent?rev=HEAD">PROTOCOL.agent</a> file.
+
 <li>OpenSSH makes various other minor extensions to and divergences from the
     standard SSH protocols. These are documented in the
     <a href="https://cvsweb.openbsd.org/src/usr.bin/ssh/PROTOCOL?rev=HEAD">PROTOCOL</a> file.
 </ul>
-
-<p>
-</body>
-</html>
